# BGEIC

./: CMakeLists.txt
include/: Logging.h  Vectors.h  VideoMode.h  Window.h
sources/: Window.cpp  main.cpp
